--- a/4-5 день/style/main.css
+++ b/4-5 день/style/main.css
@@ -5,7 +5,7 @@
 
 /*Черный фон*/
 .header1 {
-    background: #212121;
+    background: #2D2B29;
     color: var(--color-text);
     font-family: Roboto,sans-serif;
     font-weight: 300;
@@ -60,4 +60,7 @@
     border-bottom: 1px solid #666;
   }
 
-  
+  .img1 {
+    width: 100%;
+    height: auto;
+  }
