--- a/4-5 день/style/main.css
+++ b/4-5 день/style/main.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: #212121;
+  background: #2D2B29;
   border-color: palevioletred;
 }
 
@@ -13,11 +13,15 @@ body {
     background: #2D2B29;
     color: var(--color-text);
     font-family: Roboto,sans-serif;
-    font-weight: 300;
+    font-weight: auto;
     font-size: 16px;
     position: relative;
-    border-color: palevioletred;
-    border: 2;
+    border-radius: 20px;
+    box-shadow: 1px 1px 2px 0px rgba(255,165,0),
+            1px 2px 4px 0px rgba(255,165,0),
+            2px 4px 8px 0px rgba(255,165,0),
+            2px 4px 16px 0px rgba(255, 153, 0, 0.7);
+    padding: 5px; //делаем красивые отступы внутри блока
 }
 
 /*отступы текста слева и справа*/
@@ -29,7 +33,7 @@ body {
 /*Меню на черном фоне*/
 .topmenu {
     backface-visibility: hidden;
-    background: #212121;
+    background: #2D2B29;
   }
   .topmenu > li {
     display: inline-block;
