--- a/4-5 день/style/main.css
+++ b/4-5 день/style/main.css
@@ -12,7 +12,7 @@ body {
 .header1 {
     background: #2D2B29;
     color: var(--color-text);
-    font-family: Roboto,sans-serif;
+    font-family: Roboto, sans-serif;
     font-weight: auto;
     font-size: 16px;
     position: relative;
@@ -80,7 +80,30 @@ body {
     background: #2D2B29;
     color: var(--color-text);
     font-family: Roboto, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
+    font-weight: auto;
+    font-size: 14px;
     position: relative;
+    border-radius: 20px;
+    box-shadow: 1px 1px 2px 0px rgba(255,165,0),
+            1px 2px 4px 0px rgba(255,165,0),
+            2px 4px 8px 0px rgba(255,165,0),
+            2px 4px 16px 0px rgba(255, 153, 0, 0.7);
+    padding: 5px; /*делаем красивые отступы внутри блока*/
   }
+
+  .footer-text {
+    margin-left: 40px;
+    margin-right: 10px;
+}
+
+ .text-osnova {
+  text-transform: uppercase;
+  position: relative;
+  width: 600px;
+  left: 400px;
+  align-content: center;
+  text-align: justify;
+  text-transform: uppercase;
+  color: #ffb300;
+ }
+
