--- a/4-5 день/style/main.css
+++ b/4-5 день/style/main.css
@@ -11,10 +11,6 @@ body {
 /*Черный фон*/
 .header1 {
     background: #2D2B29;
-    color: var(--color-text);
-    font-family: Roboto, sans-serif;
-    font-weight: auto;
-    font-size: 16px;
     position: relative;
     border-radius: 20px;
     box-shadow: 1px 1px 2px 0px rgba(255,165,0),
@@ -26,8 +22,8 @@ body {
 
 /*отступы текста слева и справа*/
 .header1-text {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /*Меню на черном фоне*/
