--- a/4-5 день/style/main.css
+++ b/4-5 день/style/main.css
@@ -67,18 +67,20 @@ nav {
 .o-nas {
     width: 95vw;
     margin: 0 auto;
+
 }
 
 .o-nas-img {
-    width: 95vw;
+    width: 100vw;
+    height: 90vh;
     margin: 0 auto;
     margin: 3px 12px 0px 0px;
 }
 
-.img-o-nas {
+.text-o-nas {
 font-family: 'PT Sans';
 font-style: normal;
-font-size: 18px;
+font-size: 16px;
 line-height: 41px;
 display: flex;
 align-items: top;
@@ -89,4 +91,15 @@ color: #fdfdfd;
 
 .first-word {
     color: #FDB913;
+}
+
+.carta {
+    width: 50vw;
+    margin: 0 auto;
+    margin: 3px 50px 0px 0px;
+}
+
+.white-img {
+    width: 20px;
+height: 20px;
 }
