--- a/4-5 день/style/main.css
+++ b/4-5 день/style/main.css
@@ -114,3 +114,31 @@ color: #fdfdfd;
     width: 30px;
     height: 20px;
 }
+
+.p-contact {
+    font-family: 'PT Sans';
+font-style: normal;
+font-size: 16px;
+line-height: 41px;
+display: flex;
+align-items: top;
+text-transform: uppercase;
+color: #fdfdfd;
+width: 80vw;
+margin: 0 auto;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+width: 100vw;
+height: 30vh;
+
+background: #393939;
+}
+
+.img-footer {
+    width: 30vw;
+    height: auto;
+}
